# gitgui

./: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  TASKS.md  USER_MANUAL.md  mockup.html  mockup_newtab.html
src/: index.html  main.ts  styles.css  tabs.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: branch.rs  git_ops.rs  locks.rs  mod.rs  project.rs
